name: SnapChat
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer: maintainer@example.com
build-depends: base >=4, bytestring >=0.9.1 && <0.10,
               containers >=0.3.0.0 && <0.4.0.0, filepath >=1.1 && <1.2,
               haskell98 -any, heist >=0.4 && <0.5, snap-core >=0.3 && <0.4, 
               snap-server >=0.3 && <0.4, stm >=2.2 && <2.3, text -any,
               mtl >=2.0 && <2.1
stability: Experimental
homepage:
package-url:
bug-reports:
synopsis: Project Synopsis Here
description: Project Description Here
category: Web
author: Frank Murphy
tested-with:
data-files:
data-dir: /home/frank/Projects/SnapChat/static
extra-source-files:
extra-tmp-files:
 
executable: SnapChat
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions: OverloadedStrings ScopedTypeVariables 
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Chat
ghc-prof-options:
ghc-shared-options:
ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded -fno-warn-unused-imports
hugs-options:
nhc98-options:
jhc-options:
